feat(markets): integrated mangrove clients for markets data fetching

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mangrovedao/mgv": "^0.9.24",
     "@radix-ui/themes": "^3.2.1",
+    "@tanstack/react-query": "^5.83.0",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
