--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   },
   "dependencies": {
     "@mangrovedao/mgv": "^0.9.24",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
     "@tanstack/react-query": "^5.83.0",
+    "@visx/visx": "^3.12.0",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "use-resize-observer": "^9.1.0",
     "viem": "^2.31.7",
-    "wagmi": "^2.15.6"
+    "wagmi": "^2.15.6",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
