--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev2": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -13,12 +14,16 @@
   "dependencies": {
     "@mangrovedao/mgv": "^0.9.24",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/themes": "^3.2.1",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^5.83.0",
     "@visx/visx": "^3.12.0",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
     "use-resize-observer": "^9.1.0",
     "viem": "^2.31.7",
     "wagmi": "^2.15.6",
@@ -32,6 +37,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
     "prool": "^0.0.24",
-    "typescript": "^5"
+    "typescript": "^5",
+    "viem-tracer": "^1.7.1"
   }
 }
